# learn-cpp

./: .gitignore  Prog1.cpp  isprime.cpp  prog2.cpp  readme.txt  try.cpp
CleanCode/: LearnAndCode.txt
CleanCode/Chapter1/: assignment1.py  assignment2.py  assignment3.py  assignment4.cpp
CleanCode/Chapter2/: assignment1.py  assignment2.cs  assignment3.cs  assignment4.php  assignment5.cpp
CleanCode/Chapter3/: main.cpp
CleanCode/Chapter5/: assignment1.cpp  assignment2.cpp
CleanCode/Chapter6/: atmClient.cpp  server.cpp
CleanCode/Chapter7/: main.cpp
CleanCode/Chapter8/: main.cpp
ConceptApplications/week1/: atofFunc.cpp  pattern.cpp
ConceptApplications/week2/: matrixManip.cpp
ConceptApplications/week4/: bank.cpp  bankSimulation.cpp
ConceptApplications/week5/: dataParser.cpp  runfile.sh
ConceptApplications/week6/: company.cpp
ConceptApplications/week7/: company.cpp  main.cpp
ConceptApplications/week8/: main.cpp  musicPlayer.cpp
DSA/: readme.txt
DSA/array/: 2Sum3Sum4Sum.cpp  (+9 more)
Git/: .gitignore  learnGit.txt
Kalpavriksha/: C_Basics.txt  try.c
Notes/: C++basics.txt  alinks  debugging.txt  libraries.txt  oops.txt  stdTempLib.txt
Notes/cMake/: CMakeLists.txt  Doxyfile  FindCustomLib.cmake  Makefile  notes.txt
Notes/cMake/Old/: CMakeLists.txt  makefile
Notes/cMake/include/mylib/: mylib.h
Notes/cMake/lib/mylib/: customMath.cpp  mylib.cpp
Notes/cMake/src/: main.cpp
Os/: multiProcess.c  multiThread.c  opeartingSys.txt
gmock/: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  version-info.in
gmock/audio/: CMakeLists.txt
gmock/audio/api/: audio.h
gmock/audio/src/: audio.cpp
gmock/audio/src/test/: CMakeLists.txt  test_audio.cpp
gmock/authenticator/: CMakeLists.txt
gmock/authenticator/api/: authenticator.h
gmock/authenticator/mock/: CMakeLists.txt  mockauthenticator.cpp  mockauthenticator.h
gmock/authenticator/src/: authenticator.cpp
gmock/authenticator/src/test/: CMakeLists.txt  test_authenticator.cpp
gmock/blobparser/: CMakeLists.txt
gmock/blobparser/api/: blobparser.h
gmock/blobparser/src/: blobparser.cpp
gmock/blobparser/src/test/: CMakeLists.txt  test_blobparser.cpp
gmock/container/: CMakeLists.txt
gmock/container/api/: notavector.h
gmock/container/src/: notavector.cpp
gmock/container/src/test/: CMakeLists.txt  test_notavector.cpp
gmock/docs/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md
gmock/logger/: CMakeLists.txt
gmock/logger/api/: logger.h
gmock/logger/mock/: CMakeLists.txt  mocklogger.cpp  mocklogger.h
gmock/logger/src/: logger.cpp
gmock/mailbox/: CMakeLists.txt
gmock/mailbox/api/: mailbox.h
gmock/mailbox/src/: mailbox.cpp
gmock/mailbox/src/test/: CMakeLists.txt  test_mailbox.cpp
gmock/pixelstuff/: CMakeLists.txt
gmock/pixelstuff/api/: pixelstuff.h
gmock/pixelstuff/mock/: CMakeLists.txt  mockpixelstuff.cpp  mockpixelstuff.h
gmock/pixelstuff/src/: pixelstuff.cpp
gmock/pixelworker/: CMakeLists.txt
gmock/pixelworker/api/: pixelworker.h
gmock/pixelworker/src/: pixelworker.cpp
gmock/pixelworker/src/test/: CMakeLists.txt  test_pixelworker.cpp
gmock/reaper/: CMakeLists.txt
gmock/reaper/api/: reaper.h
gmock/reaper/src/: reaper.cpp
gmock/reaper/src/test/: CMakeLists.txt  test_reaper.cpp
gmock/session/: CMakeLists.txt
gmock/session/api/: session.h
gmock/session/src/: session.cpp
gmock/session/src/test/: CMakeLists.txt  test_session.cpp
gmock/statemachine/: CMakeLists.txt
gmock/statemachine/api/: statemachine.h
gmock/statemachine/src/: statemachine.cpp
gmock/statemachine/src/test/: CMakeLists.txt  test_statemachine.cpp
gmock/stringutils/: CMakeLists.txt
gmock/stringutils/api/: stringutils.h
gmock/stringutils/src/: stringutils.cpp
gmock/stringutils/src/test/: CMakeLists.txt  test_stringutils.cpp
gmock/topology/: CMakeLists.txt
gmock/topology/api/: topology.h
gmock/topology/src/: topology.cpp
gmock/topology/src/test/: CMakeLists.txt  matchers.h  test_topology.cpp
gmock/video/: CMakeLists.txt
gmock/video/amd/: CMakeLists.txt
gmock/video/amd/api/: amdvideodriver.h
gmock/video/amd/src/: amdvideodriver.cpp
gmock/video/amd/src/test/: CMakeLists.txt  test_amdvideodriver.cpp
gmock/video/videodriver/: CMakeLists.txt
gmock/video/videodriver/api/: videodriver.h
gmock/video/videodriver/test/: CMakeLists.txt
gmock/video/videodriver/test/api/: videodriver_paramtest.h
gmock/video/videodriver/test/src/: videodriver_paramtest.cpp
test/: script.py
(+466 files in other folders)
